--- a/CaptainAmerica/CaptainAmerica.html
+++ b/CaptainAmerica/CaptainAmerica.html
@@ -8,12 +8,9 @@
 </head>
 
 <body>
-Captain America<br>
 <img src="CaptainAmerica_1941series_001.jpg" title="Jack Kirby">
 <img src="../Avengers/avengers1963series004.jpg" title="Jack Kirby"> <br>
-Creators: Joe Simon, Jack Kirby<br>
-Series: 1941-1949 (#1-75), 1956 (#75-78), 1968-1996 (#100-454), 1996-1997 (#1-13), 1998-2002 (#1-50), 2002-2004 (#1-32), 2005-2011 (#1-50; 600-619), 2011-2012 (#1-19), many limited series editions.<br>
-Publisher: Timely, Marvel<br>
+Series: 1941-1949 (#1-75), 1956 (#75-78), 1968-1996 (#100-454), 1996-1997 (#1-13), 1998-2002 (#1-50), 2002-2004 (#1-32), 2005-2011 (#1-50; 600-619), 2011-2012 (#1-19), many limited series editions, by Timely and Mavel
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor"></div></div>
@@ -203,7 +200,7 @@ Publisher: Timely, Marvel<br>
 </div>
 </div>
 </p><p>
-Captain America is a series created by cartoonists Joe Simon and Jack Kirby, the character first appeared in Captain America Comics #1 (cover dated March 1941) from Timely Comics, a predecessor of Marvel Comics. 
+Captain America is a series created by cartoonists Joe Simon and <a href="../JackKirby/JackKirby.html">Jack Kirby</a>, the character first appeared in Captain America Comics #1 (cover dated March 1941) from Timely Comics, a predecessor of Marvel Comics. 
 </p><p>
 Captain America was designed as a patriotic super soldier who often fought the Axis powers of World War II and was Timely Comics' most popular character during the wartime period. The popularity of superheroes waned following the war and the Captain America comic book was discontinued in 1950, with a short-lived revival in 1953. Since Marvel Comics revived the character in 1964, Captain America has remained in publication.
 </p><p>
