--- a/FantasticFour/FantasticFour.html
+++ b/FantasticFour/FantasticFour.html
@@ -8,10 +8,9 @@
 </head>
 
 <body>
-the Fantastic Four<br>
 <img src="FantasticFourpinup1.jpg"> 
 <img src="FantasticFourpinup2.jpg"> <br>
-Publisher: Marvel Comics
+Nearly 700 issues over various restarts by Marvel Comics. Movies in 2005 and 2007 by 20th Century Fox. 2015 Movie by Marvel/Disney
 <p>
 
 <div class="row">
