--- a/BlackPanther/BlackPanther.html
+++ b/BlackPanther/BlackPanther.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="BlackPanther01.jpg"><br>
-Created by Jack Kirby<br>
+Created by <a href="../JackKirby/JackKirby.html">Jack Kirby</a><br>
 15 issues 1977; 4 issues 1988; 41 issues 2005; 13 issues 2009; 11 issues 2011; 2016 (#1-18 then 166-169?), by Marvel
 </p><p>
 <div class="row"><div class="column">
