--- a/Hulk/Hulk.html
+++ b/Hulk/Hulk.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-<h2>The Incredible Hulk</h2>
 <img src="Hulk001.jpg"> <img src="HulkTV.jpg"> <img src="HulkMovie2003.jpg"> <img src="HulkMovie2008.jpg"> <br>
-Series: 1962 comic, 1978 TV, 1996 TV Cartoon, 2003 Movie, 2008 Movie<br>
-Publisher: Marvel (Disney), Universal (Comcast)<br>
+1962 comic created by <a href="../JackKirby/JackKirby.html">Jack Kirby</a>, published by Marvel. 1978 TV Series, 1996 TV Cartoon, 2003 Movie, 2008 Movie by Universal (Comcast).
 <p>
 The Hulk was created by writer Stan Lee and artist Jack Kirby, the character first appeared in the debut issue of The Incredible Hulk (May 1962). In his comic book appearances, the character is both the Hulk, a green-skinned, hulking and muscular humanoid possessing a vast degree of physical strength, and his alter ego Bruce Banner, a physically weak, socially withdrawn, and emotionally reserved physicist, the two existing as personalities independent and resenting of the other.
 </p><p>
