--- a/IronMan/IronMan.html
+++ b/IronMan/IronMan.html
@@ -10,7 +10,7 @@
 <body>
 <img src="TalesOfSuspense039.jpg"> <img src="IronMan001.jpg"> <br>
 332 issues 1968-1996 by Marvel<br>
-Originally written by Stan Lee and illustrated by Jack Kirby<br>
+Characters created by <a href="../JackKirby/JackKirby.html">Jack Kirby</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
