--- a/MightyThor/MightyThor.html
+++ b/MightyThor/MightyThor.html
@@ -11,8 +11,8 @@
 <h2>The Mighty Thor</h2>
 <img src="Thor126.jpg"> 
 <img src="Thor700.jpg"> <br>
-Series: 1962-1966 <a href="../JourneyIntoMystery/JourneyIntoMystery.html">Journey into Mystery</a> (#83-125), 1966-2018 (#126-703) <br>
-Publisher: Marvel<br>
+First appearence from 1962-1966 <a href="../JourneyIntoMystery/JourneyIntoMystery.html">Journey into Mystery</a> (#83-125), 1966-2018 (#126-703) <br>
+Characters created by <a href="../JackKirby/JackKirby.html">Jack Kirby</a> and published by Marvel<br>
 <p>
 Thor (Thor Odinson) is a fictional superhero appearing in American comic books published by Marvel Comics. The character, based on the Norse deity of the same name, is the Asgardian god of thunder and possesses the enchanted hammer Mjolnir, which grants him the ability to fly and manipulate weather amongst his other superhuman attributes.
 </p><p>
