--- a/NickFury/NickFury.html
+++ b/NickFury/NickFury.html
@@ -8,10 +8,8 @@
 <body>
 
 <img src="NickFury001.jpg"> <br>
-6 issues 2017 by Marvel<br>
-Written by James Robinson<br>
-Illustrations by Aco<br>
-Cover by Greg Land<br>
+6 issues in 2017. Characters created by <a href="../JackKirby/JackKirby.html">Jack Kirby</a> published by Marvel<br>
+
 <p>
 NICK FURY. The world is a dangerous place. And there's danger in drawing attention to your plans. When S.H.I.E.L.D. needs a lone agent to infiltrate, capture and remain anonymous, there's no one better than NICK FURY. 
 </p><p>
