--- a/SilverSurfer/SilverSurfer.html
+++ b/SilverSurfer/SilverSurfer.html
@@ -9,8 +9,8 @@
 
 <body>
 <img src="SilverSurfer1968series1.jpg" title="Silver Surfer #1"> <br>
-Series: 18 issues 1968 - 1970, 1 issue 1982, 148 issues 1987 - 1998, 2 issues 1988 - 1989, 14 issues 2003 -2004, 15 issues 2014 - 2016, 14 issues 2016 - 2017<br>
-Publisher: Marvel<br>
+18 issues 1968 - 1970, 1 issue 1982, 148 issues 1987 - 1998, 2 issues 1988 - 1989, 14 issues 2003 -2004, 15 issues 2014 - 2016, 14 issues 2016 - 2017.<br>
+Characters created by <a href="../JackKirby/JackKirby.html">Jack Kirby</a> and published by Marvel<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
