--- a/Mad/Mad.html
+++ b/Mad/Mad.html
@@ -49,7 +49,7 @@ Over 550 issues, still going, from 1952 EC, then 1960 DC, renumbered #1 2018<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Mad is an American humor magazine founded in 1952 by editor Harvey Kurtzman and publisher William Gaines, launched as a comic book before it became a magazine. It was widely imitated and influential, affecting satirical media, as well as the cultural landscape of the 20th century, with editor Al Feldstein increasing readership to more than two million during its 1974 circulation peak. 
+Mad is an American humor magazine founded in 1952 by editor <a href="../HarveyKurtzman/HarveyKurtzman.html">Harvey Kurtzman</a> and publisher <a href="../BillGaines/BillGaines.html">William Gaines</a>, launched as a comic book before it became a magazine. It was widely imitated and influential, affecting satirical media, as well as the cultural landscape of the 20th century, with editor Al Feldstein increasing readership to more than two million during its 1974 circulation peak. 
 </p><p>
 As of January 2019, Mad has published over 550 regular issues, as well as hundreds of reprint "Specials", original material paperbacks, compilation books and other print projects.
 </p><p>
