--- a/MarvelComics/marvelcomics.html
+++ b/MarvelComics/marvelcomics.html
@@ -3,16 +3,15 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../ZimStyles.css">
-<title>Marvel Comics</title>
+<title>Marvel Mystery Comics</title>
 </head>
 
 <body>
-<h2>Marvel (Mystery) Comics</h2>
 <img src="MarvelComics001.jpg"> 
 <img src="MarvelMysteryComics2.jpg">
 <img src="MarvelMysteryComics1.jpg"> <br>
 Released: October 1939<br>
-Publisher: <a href="../../Publisher/marvel.html">Marvel Comics</a><br>
+Publisher: <a href="../../Publisher/Marvel.html">Marvel Comics</a><br>
 Illustrators: Frank Paul<br>
 Writer: Ben Thompson
 <p>
