--- a/index.html
+++ b/index.html
@@ -7113,6 +7113,13 @@
 </tr>
 
 <tr>
+<td>Harvey Kurtzman</td>
+<td>1924</td>
+<td>Creator</td>
+<td><a href="HarveyKurtzman/HarveyKurtzman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Haunt of Fear</td>
 <td>1954</td>
 <td>EC</td>
@@ -7292,6 +7299,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="Hellstorm/Hellstorm.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Help!</td>
+<td>1960</td>
+<td>Warren</td>
+<td><a href="Help/Help.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9420,7 +9434,7 @@
 <td>Marvel Comics</td>
 <td>1961</td>
 <td>Publisher</td>
-<td><a href="Marvel/marvel.html">Details</a></td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13572,6 +13586,13 @@
 </tr>
 
 <tr>
+<td>Stan Lee</td>
+<td>1922</td>
+<td>Creator</td>
+<td><a href="StanLee/StanLee.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stanislaw Szukalski</td>
 <td>1893</td>
 <td>Creator</td>
@@ -15530,6 +15551,13 @@
 <td>1995</td>
 <td>Epic</td>
 <td><a href="WilliamShatnerTekWar/WilliamShatnerTekWar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>William Gaines</td>
+<td>1922</td>
+<td>Creator</td>
+<td><a href="BillGaines/BillGaines.html">Details</a></td>
 </tr>
 
 <tr>
