--- a/Xmen/xmen.html
+++ b/Xmen/xmen.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Xmen001.jpg" title="X-Men #1 1963"> <br>
-Created by: Jack Kirby, Stan Lee<br>
+Created by: <a href="../JackKirby/JackKirby.html">Jack Kirby</a> and Stan Lee<br>
 Publisher: Marvel<br>
 Comic Series: 1963 (#1-66), (#67-93 = reprints), Giant-Sized X-Men #1 and issues #94-544 feature the new X-Men team, #114 title changes to "Uncanny X-Men" gets dropped with #544 in 2012. Continues to #600 in 2015 with some title changes and renumbering.<br>
 Movie Series: 10 so far with more comming (2000 - 2017).<br>
