--- a/LittleAnnieFanny/LittleAnnieFanny.html
+++ b/LittleAnnieFanny/LittleAnnieFanny.html
@@ -6,11 +6,10 @@
 <title>Little Annie Fanny</title>
 </head>
 <body>
-Little Annie Fanny<br>
 <img src="LittleAnnieFanny1966.jpg"> <img src="LittleAnnieFanny2000.jpg"><br>
 Series: 1962-1988 magazine strip, Collection TPB<br>
 Publisher: Playboy, Dark Horse<br>
-Created by Harvey Kurtzman and Will Elder<br>
+Created by <a href="../HarveyKurtzman/HarveyKurtzman.html">Harvey Kurtzman</a> and <a href="../WillElder/WillElder.html">Will Elder</a><br>
 <p>
 1966: Written by Harvey Kurtzman and Will Elder. Art by Kurtzman and Elder. Ever since bursting onto the scene (and out of her sweater) in October 1962, Little Annie Fanny has been a fan favorite of Playboy readers. This collection of some her funniest stories will leave you in stitches, as Little Annie takes your breath away! 
 </p><p>
