--- a/index.html
+++ b/index.html
@@ -8059,6 +8059,13 @@
 </tr>
 
 <tr>
+<td>Jack Davis</td>
+<td>1924</td>
+<td>Creator</td>
+<td><a href="JackDavis/JackDavis.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jack Kirby</td>
 <td>1917</td>
 <td>Creator</td>
