--- a/AmazingScrewOnHead/AmazingScrewOnHead.html
+++ b/AmazingScrewOnHead/AmazingScrewOnHead.html
@@ -10,7 +10,7 @@
 <img src="AmazingScrewOnHead.jpg">
 <img src="AmazingScrewOnHead2010Book.jpg"> <br>
 1 issue, 1 collectors book in 2002 and 2010 by Dark Horse<br>
-Illustrator and writer: Mike Mignola
+Created by <a href="../MikeMignola/MikeMignola.html">Mike Mignola</a>
 <p>
 The book collects various Mike Mignola stories including the title story. Similar in tone and theme to Mignola's better known Hellboy, The Amazing Screw-On Head is a black comedy that stars a robot living during the Lincoln administration whose head can be attached to different bodies with different tactical abilities, and who functions as an agent of the U.S. government.
 </p><p>
