--- a/LobsterJohnson/LobsterJohnson.html
+++ b/LobsterJohnson/LobsterJohnson.html
@@ -2,28 +2,48 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Lobster Johnson</title>
 </head>
 
 <body>
-Lobster Johnson<br>
-<img src="LobsterJohnsonIP.jpg"> <br>
-Publisher: Dark Horse<br>
+<img src="LobsterJohnsonIP.jpg">
 <p>
-Lobster Johnson (also known as the Lobster) is a fictional character featured in the Hellboy and Bureau for Paranormal Research and Defense comic books published by Dark Horse Comics. He was created by Mike Mignola.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="LobsterJohnsonIP.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LJTIP.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LJTBH.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LJSSR.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LJGTL.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LJTPG.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LJCFIL.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Lobster Johnson (also known as the Lobster) is a fictional character featured in the Hellboy and Bureau for Paranormal Research and Defense comic books published by Dark Horse Comics. He was created by <a href="../MikeMignola/MikeMignola.html">Mike Mignola</a>.
 </p><p>
 Within the Hellboy universe, the Lobster was a vigilante who worked in secret in New York City during the 1930s. Although the public believes that the Lobster was only the hero of pulp serials and comics, he was a real man who faced gangsters as well as paranormal threats. The Lobster had a reputation for violence, such as killing mobsters and burning his trademark lobster claw symbol into their foreheads with the palm of his gloved hand. 
+</p><p>
+The Iron Prometheus: As America hovers on the brink of World War II, the Lobster and his allies must race against the clock as they fight their way through cannibals, yetis, and the machinations of a mysterious villain bent on fulfilling a deadly prophecy. After years of captivating fans from the pages of Hellboy and B.P.R.D., the pulp-style adventures of Lobster Johnson take the limelight in the Lobster's first solo series. Written and with covers by Hellboy creator Mike Mignola, and drawn by Jason Armstrong (Ferro City, The Sensational Spider-Man), Lobster Johnson: The Iron Prometheus is a wild ride full of fearsome monsters, mad scientists, and threats from the world beyond.
+</p><p>
+Satan Smells A Rat: Someone is killing off skid row bums and dumping their corpses. Hellboy’s favorite gun-blazing vigilante takes justice to the skies aboard a Nazi-filled zeppelin and to the gritty alleyways of Chinatown against an army of monkeys. Collects The Prayer of Neferu, Caput Mortuum, Satan Smells a Rat, A Scent of Lotus #1–#2, and “Tony Masso’s Finest Hour” from Dark Horse Presents #9.
+</p><p>
+Get The Lobster: A Manhattan wrestling match goes terribly wrong when the ref is killed in front of a live audience by two crazed—and seemingly bulletproof—wrestlers. Lobster Johnson’s attempt to subdue the mad duo ends with him becoming public enemy number one! Will the Lobster be able to clear his name with the full power of the city’s cops after him? Collects Lobster Johnson: Get the Lobster #1–#5.
+</p><p>
+The Pirates Ghost: The Lobster is at his pulpiest in a pair of three-part stories drawn by veteran Lobster artist Tonci Zonjic. A trio of robots terrorize New York City, and the only thing more mysterious than their origins is their motives. When a pirate ship's ghostly crew appears on the Hudson River out of thin air, the harbor patrol calls on the Lobster! Collects Lobster Johnson: Metal Monsters of Midtown #1-3 and Lobster Johnson: The Pirate's Ghost #1-3.
+</p><p>
+A Chain Forged In Life: Collecting five Lobster Johnson one-shots featuring the Lobster in a Christmas robbery, a prison break with a familiar enemy behind it, an art museum heist, a preacher serving up more than scripture, and a zombie hitman! Collects Lobster Johnson: A Chain Forged in Life, Lobster Johnson: The Glass Mantis, Lobster Johnson: The Forgotten Man, Lobster Johnson: Garden of Bones, and Lobster Johnson: Mangekyo.
 </p>
-<p>
-Issues:<ul>
-<li><a href="LJTIP.html">The Iron Prometheus</a> 2007</li>
-<li><a href="LJTBH.html">The Burning Hand</a> 2012</li>
-<li><a href="LJSSR.html">Satan Smells A Rat</a> 2014</li>
-<li><a href="LJGTL.html">Get The Lobster</a> 2014</li>
-<li><a href="LJTPG.html">The Pirates Ghost</a> 2017</li>
-<li><a href="LJCFIL.html">A Chain Forged In Life</a> 2018</li>
-</ul>
-</p>
+
 </body>
 </html>
