--- a/index.html
+++ b/index.html
@@ -10243,6 +10243,13 @@
 </tr>
 
 <tr>
+<td>Military Comics</td>
+<td>1941</td>
+<td>Quality Comics</td>
+<td><a href="MilitaryComics/MilitaryComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Milkman Murders</td>
 <td>2005</td>
 <td>Dark Horse</td>
@@ -11447,6 +11454,13 @@
 </tr>
 
 <tr>
+<td>Panic</td>
+<td>1954</td>
+<td>EC</td>
+<td><a href="Panic/Panic.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pantheon Books</td>
 <td>1942</td>
 <td>Publisher</td>
@@ -12092,6 +12106,13 @@
 <td>1972</td>
 <td>Marvel</td>
 <td><a href="RedWolf/RedWolf.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Reed Crandall</td>
+<td>1917</td>
+<td>Creator</td>
+<td><a href="ReedCrandall/ReedCrandall.html">Details</a></td>
 </tr>
 
 <tr>
