--- a/index.html
+++ b/index.html
@@ -9298,6 +9298,13 @@
 </tr>
 
 <tr>
+<td>Madman</td>
+<td>1990</td>
+<td>Tundra</td>
+<td><a href="Madman/Madman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Magic Comics</td>
 <td>1939</td>
 <td>David McKay</td>
@@ -10233,6 +10240,13 @@
 <td>1962</td>
 <td>Marvel</td>
 <td><a href="MightyThor/MightyThor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mike Allred</td>
+<td>1970</td>
+<td>Creator</td>
+<td><a href="MikeAllred/MikeAllred.html">Details</a></td>
 </tr>
 
 <tr>
