--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <tr>
 <th>Title</th>
 <th>Year</th>
-<th>Producer</th>
+<th>Publisher</th>
 <th>Details</th>
 </tr>
 </thead>
@@ -2939,7 +2939,7 @@
 <tr>
 <td>Boxers and Saints</td>
 <td>2013</td>
-<td>First Second Books</td>
+<td>First Second</td>
 <td><a href="BoxersAndSaints/BoxersAndSaints.html">Details</a></td>
 </tr>
 
@@ -3884,7 +3884,7 @@
 <tr>
 <td>Constantine</td>
 <td>2005</td>
-<td>Warner Bros</td>
+<td>WB</td>
 <td><a href="Constantine/Constantine.html">Details</a></td>
 </tr>
 
@@ -6505,6 +6505,13 @@
 </tr>
 
 <tr>
+<td>George Perez</td>
+<td>1954</td>
+<td>Creator</td>
+<td><a href="GeorgePerez/GeorgePerez.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Georges Clairin</td>
 <td>1843</td>
 <td>Creator</td>
@@ -6843,7 +6850,7 @@
 <tr>
 <td>Grimjack</td>
 <td>1984</td>
-<td>First</td>
+<td>First Comics</td>
 <td><a href="GrimJack/GrimJack.html">Details</a></td>
 </tr>
 
@@ -8185,10 +8192,24 @@
 </tr>
 
 <tr>
+<td>Jerry Siegel</td>
+<td>1914</td>
+<td>Creator</td>
+<td><a href="JerrySiegel/JerrySiegel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jessica Jones</td>
 <td>2001</td>
 <td>Marvel</td>
 <td><a href="Alias/alias.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jim Lee</td>
+<td>1964</td>
+<td>Creator</td>
+<td><a href="JimLee/JimLee.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8208,7 +8229,7 @@
 <tr>
 <td>Jimmy Corrigan</td>
 <td>2000</td>
-<td>Pantheon Books</td>
+<td>Pantheon</td>
 <td><a href="JimmyCorrigan/JimmyCorrigan.html">Details</a></td>
 </tr>
 
@@ -8238,6 +8259,13 @@
 <td>1926</td>
 <td>Creator</td>
 <td><a href="JoeManeely/JoeManeely.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Joe Shuster</td>
+<td>1914</td>
+<td>Creator</td>
+<td><a href="JoeShuster/JoeShuster.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9979,7 +10007,7 @@
 <tr>
 <td>Maus: A Survivors Tale</td>
 <td>1980</td>
-<td>Pantheon Books</td>
+<td>Pantheon</td>
 <td><a href="Maus/maus.html">Details</a></td>
 </tr>
 
@@ -10259,7 +10287,7 @@
 <tr>
 <td>Military Comics</td>
 <td>1941</td>
-<td>Quality Comics</td>
+<td>Quality</td>
 <td><a href="MilitaryComics/MilitaryComics.html">Details</a></td>
 </tr>
 
@@ -11475,7 +11503,7 @@
 </tr>
 
 <tr>
-<td>Pantheon Books</td>
+<td>Pantheon</td>
 <td>1942</td>
 <td>Publisher</td>
 <td><a href="PantheonBooks/pantheonbooks.html">Details</a></td>
@@ -13364,7 +13392,7 @@
 <tr>
 <td>Space Action</td>
 <td>1952</td>
-<td>Ace Magazines</td>
+<td>Ace</td>
 <td><a href="SpaceAction/SpaceAction.html">Details</a></td>
 </tr>
 
