--- a/BigGuyRustyRobot/BigGuyRustyRobot.html
+++ b/BigGuyRustyRobot/BigGuyRustyRobot.html
@@ -2,16 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Big Guy and Rusty the Boy Robot</title>
 </head>
 
 <body>
 <img src="BigGuyRustyRobot.jpg"> <br>
 2 issues 1995, 1 collection in 2000 by Dark Horse<br>
-Illustrator: Geof Darrow, Writer: Frank Miller
+Illustrator: <a href="../GeofDarrow/GeofDarrow.html">Geof Darrow</a><br>
+Writer: <a href="../FrankMiller/FrankMiller.html">Frank Miller</a>
 <p>
-A gargantuan monster is tearing apart downtown Tokyo and turning its fair citizens into a menagerie of grotesques! Can anyone stop the carnage? Can anyone save the city? Enter Rusty, the Boy Robot, Japan's biggest big gun! If he can't atomize the atomic monstrosity, nobody can! Or, rather, nobody in the Eastern hemisphere! 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BigGuyRustyRobot.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BigGuyRustyRobot1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BigGuyRustyRobot2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BigGuyRustyRobot3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BigGuyRustyRobot4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BigGuyRustyRobot5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BigGuyRustyRobot6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+The comic book was adapted into an animated TV series of the same name. After appearing in various comic book pin-up and poster pages, the Big Guy first appeared without Rusty in issues #6 and 7 of Mike Allred's Madman Comics, which was part of Dark Horse Comics' now defunct Legend imprint.
+</p><p>
+The property graduated to its own series, a large format two-issue mini-series in 1995, written by Frank Miller and illustrated by Geof Darrow. The story revolves around an attack on Tokyo by a giant reptilian creature that is originated in an experiment gone wrong, and the failure of the newly commissioned Rusty the Boy Robot to stop the threat. Subsequently, Japan requested help from the U.S. Armed Forces, whose ultimate defense, the robot Big Guy, launches from his air carrier base and uses his awesome arsenal and good old-fashioned American know-how to save the day.
+</p><p>
+Big Guy also makes an appearance in Frank Miller and Dave Gibbons' Martha Washington Stranded in Space and cameo appearances in the last Sin City book, Sin City: Hell and Back.
 </p>
 </body>
 </html>
