--- a/Elfquest/Elfquest.html
+++ b/Elfquest/Elfquest.html
@@ -8,11 +8,8 @@
 </head>
 
 <body>
-Elfquest<br>
 <img src="Elfquest.jpg"> <br>
-Creator: Wendi and Richard Pini <br>
-Series: 21 issues WARP 1978–2003; Marvel 1985–1988; DC 2003–2007; Dark Horse 2013–present<br>
-Publisher: WARP Graphics<br>
+21 issues from 1978–2003 by WARP. Reprinted from 1985–1988 by Marvel. DC 2003–2007; Dark Horse 2013–present
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -48,7 +45,7 @@ Publisher: WARP Graphics<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Elfquest (or ElfQuest) is a cult hit comic book property created by Wendy and Richard Pini in 1978. It is a fantasy story about a community of elves and other fictional species who struggle to survive and coexist on a primitive Earth-like planet with two moons. Several published volumes of prose fiction also share the same setting. Elfquest was one of the first comic book series to have a planned conclusion. Over the years Elfquest has been self-published by the Pinis through their own company Warp Graphics, then Marvel Comics, then the Pinis again, more recently DC Comics and presently Dark Horse Comics. All issues of Elfquest published prior to 2013 are available online for free.
+Elfquest (or ElfQuest) is a cult hit comic book property created by <a href="../WendyPini/WendyPini.html">Wendy</a> and Richard Pini in 1978. It is a fantasy story about a community of elves and other fictional species who struggle to survive and coexist on a primitive Earth-like planet with two moons. Several published volumes of prose fiction also share the same setting. Elfquest was one of the first comic book series to have a planned conclusion. Over the years Elfquest has been self-published by the Pinis through their own company Warp Graphics, then Marvel Comics, then the Pinis again, more recently DC Comics and presently Dark Horse Comics. All issues of Elfquest published prior to 2013 are available online for free.
 </p><p>
 The first Elfquest story was published in February 1978, in the underground comic book Fantasy Quarterly, published by Lansing, Michigan-based IPS (Independent Publishers Syndicate). That company folded after publishing the first issue of Elfquest. (Sandwiched between Elfquest's "Fire and Flight" parts one and two was a brief story written by T. Casey Brennan and illustrated by Cerebus the Aardvark creator Dave Sim titled "Doorway to the Gods".) The quality of the publication was disappointing to Wendy and Richard Pini. The cover paper stock was only slightly thicker and whiter than newsprint (the exterior was printed unglossed with a very limited color palette) and the paper used inside of the comic book was newsprint.
 </p><p>
