--- a/Transmetropolitan/Transmetropolitan.html
+++ b/Transmetropolitan/Transmetropolitan.html
@@ -2,19 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Transmetropolitan</title>
 </head>
 
 <body>
-<h2>Transmetropolitan</h2>
-<img src="Transmetropolitan01.jpg"> <br>
-Writer: Warren Ellis <br>
-Illustrator: Darick Robertson
-Series: on-going, collections<br>
-Publisher: Helix, Vertigo (DC)<br>
+<img src="Transmetropolitan01.jpg" title="cover by Geof Darrow"> <br>
+60 issues from 1997 - 2002 by Vertigo (DC)
 <p>
-Transmetropolitan is a cyberpunk transhumanist comic book series written by Warren Ellis and co-created and designed by Darick Robertson. It was published by the American company DC Comics in 1997–2002. The series was originally part of the short-lived DC Comics imprint Helix, but upon the end of the book's first year the series was moved to the Vertigo imprint and DC Comics shut down the Helix imprint. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan01.jpg" title="cover by Geof Darrow"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Transmetropolitan12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Transmetropolitan is a cyberpunk transhumanist comic book series written by <a ref="../WarrenEllis/WarrenEllis.html">Warren Ellis</a> and co-created and illustrated by Darick Robertson. Notable covers by <a href="../GeofDarrow/GeofDarrow.html">Geof Darrow</a>. It was published by the American company DC Comics in 1997–2002. The series was originally part of the short-lived DC Comics imprint Helix, but upon the end of the book's first year the series was moved to the Vertigo imprint and DC Comics shut down the Helix imprint. 
 </p><p>
 Transmetropolitan chronicles the battles of Spider Jerusalem, infamous renegade gonzo journalist of the future, an homage to gonzo journalism founder Hunter S. Thompson. Spider Jerusalem dedicates himself to fighting the corruption and abuse of power of two successive United States presidents. He and his "filthy assistants" strive to keep their world from turning more dystopian than it already is while dealing with the struggles of fame and power, brought about due to the popularity of Spider via his articles.
 </p><p>
