--- a/WendyPini/WendyPini.html
+++ b/WendyPini/WendyPini.html
@@ -28,7 +28,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Creator of <a href="https://blzim.github.io/kb/Creation/Elfquest/Elfquest.html">ElfQuest</a>,  Wendy Fletcher was born in San Francisco in 1951, and from an early age demonstrated the talents later to come to fruition as a professional illustrator and creator of Elfquest, originally as an independant publication. 
+Creator of <a href="../Elfquest/Elfquest.html">ElfQuest</a>,  Wendy Fletcher was born in San Francisco in 1951, and from an early age demonstrated the talents later to come to fruition as a professional illustrator and creator of Elfquest, originally as an independant publication. 
 </p><p>
 She also formed WARP Graphics. In addition to Elfquest, WARP also published several other comic book series, including Myth Adventures and related titles by Robert Asprin, and Thunder Bunny, created by Martin Greim.
 </p><p>
