--- a/index.html
+++ b/index.html
@@ -6449,6 +6449,13 @@
 </tr>
 
 <tr>
+<td>Geof Darrow</td>
+<td>1955</td>
+<td>Creator</td>
+<td><a href="GeofDarrow/GeofDarrow.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gem Comics</td>
 <td>1945</td>
 <td>Spotlight</td>
@@ -13012,6 +13019,13 @@
 </tr>
 
 <tr>
+<td>Shaolin Cowboy</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="ShaolinCowboy/ShaolinCowboy.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sheena</td>
 <td>1948</td>
 <td>Fiction House</td>
@@ -15306,6 +15320,13 @@
 <td>1976</td>
 <td>DC</td>
 <td><a href="Warlord/Warlord.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warren Ellis</td>
+<td>1968</td>
+<td>Creator</td>
+<td><a href="WarrenEllis/WarrenEllis.html">Details</a></td>
 </tr>
 
 <tr>
