--- a/Druid/Druid.html
+++ b/Druid/Druid.html
@@ -2,26 +2,37 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Druid</title>
 </head>
 
 <body>
-<h2>Druid</h2>
-<img src="Druid1.jpg"> 
-<img src="Druid2.jpg"> 
-<img src="Druid3.jpg"> 
-<img src="Druid4.jpg"> <br>
-Series: 4 issue mini-series, 1995<br>
-Publisher: Marvel<br>
+<img src="Druid1.jpg"> <br>
+4 issue mini-series in 1995 by Marvel
 <p>
-Cover by Leonardo Manco. Sick of This, script by Warren Ellis, art by Leonardo Manco; Dr. Druid makes the transformation from a low-level sorcerer into a powerful Druid in the proper and terrifying true tradition of the word. Smoke Damage article by Warren Ellis. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Druid1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Druid2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Druid3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Druid4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-Cover by Leonardo Manco. Mind to Meat, script by Warren Ellis, art by Leonardo Manco; Druid attempts to set up a power-base in Manhattan; Part of this is disguising himself as a moral vigilante hero for hire; He is investigated by local Manhattan magical powers; something nasty has plans for New York citizens; Druid himself sees a well-known Druidic legend; a washerwoman washing the Druid's own clothes; This means the clothes' owner is due to die and soon!
+Script by <a href="../WarrenEllis/WarrenEllis.html">Warren Ellis</a>, art by Leonardo Manco.
 </p><p>
-Warren Ellis script; Manco art.
+Dr. Druid makes the transformation from a low-level sorcerer into a powerful Druid in the proper and terrifying true tradition of the word. Smoke Damage article by Warren Ellis. 
 </p><p>
-Warren Ellis script; Manco art.
+Mind to Meat, script by Warren Ellis, art by Leonardo Manco; Druid attempts to set up a power-base in Manhattan; Part of this is disguising himself as a moral vigilante hero for hire; He is investigated by local Manhattan magical powers; something nasty has plans for New York citizens; Druid himself sees a well-known Druidic legend; a washerwoman washing the Druid's own clothes; This means the clothes' owner is due to die and soon!
 </p>
 
 </body>
