--- a/ElsewherePrince/ElsewherePrince.html
+++ b/ElsewherePrince/ElsewherePrince.html
@@ -2,16 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>the Elsewhere Prince</title>
 </head>
 
 <body>
-<h2>the Elsewhere Prince</h2>
-<img src="ElsewherePrince.jpg"> <br>
-Series: 6 issue mini-series 1990<br>
-Publisher: Epic (Marvel)<br>
+<img src="ElsewherePrince1.jpg"> <br>
+6 issue mini-series 1990 by Epic (Marvel)
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ElsewherePrince1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ElsewherePrince2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ElsewherePrince3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ElsewherePrince4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ElsewherePrince5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ElsewherePrince6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The Elsewhere Prince is just one of many series published by Epic about Moebius’ Airtight Garage. The series takes place on an asteroid which holds alternate dimensions in the same place and at the same time. The place is called the Airtight Garage and was created by a character named Major Grubert who keeps tabs on his dimensions from his spaceship, the Ciguri.
 </p><p>
 In The Elsewhere Prince, a young artist joins a traveling band of mercenaries. After stopping for an evening in a small village, the group adds another member to the group, a young boy who wants to be a warrior. The men are all killed, in a horrible battle with a beetle-like creature called a Jouk. The rest of the series chronicles the adventures of the surviving two members of the traveling party, the artist, and upstart warrior. R.J.M. Lofficier wrote,while Eric Shanower handled the penciling.
