--- a/EmilyTheStrange/EmilyTheStrange.html
+++ b/EmilyTheStrange/EmilyTheStrange.html
@@ -2,22 +2,47 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Emily The Strange</title>
 </head>
 
 <body>
-<h2>Emily The Strange</h2>
-<img src="EmilyTheStrange2005.jpg"> 
-<img src="RosamondEmily.jpg"> <br>
-Series: 4 issues 2005<br>
-Publisher: Dark Horse<br>
+<img src="Emily1.jpg"><br>
+4 issues in 2005, 4 issues in 2007, 4 issues 2009 by Dark Horse
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Emily1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Emily12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Emily the Strange is an advertising mascot character featured in several books, graphic novels, merchandise and clothing lines. She was created by Rob Reger for his company Cosmic Debris Etc. Inc. located in San Francisco, California. Cosmic Debris has opened four Emily the Strange flagship stores to date (Taiwan, Taipei, Hong Kong and Greece), with plans to open Emily the Strange retail stores in the Americas in the next years.
 </p><p>
 The very first Emily the Strange illustration dates from 1991, on Santa Cruz Skateboards professional skater Ross Goodman's skateboard graphics. Nathan Carrico, graphic artist and creative director, designed Emily in 1991 for Santa Cruz Skateboards in Santa Cruz, California.
 </p><p>
 The 1978 children's book Nate the Great and the Lost List features a very similar illustration of a young girl named Rosamond. She also has long black hair and is frequently accompanied by her black cats. When Rosamond is introduced she wears a short dress and white Mary Jane shoes, similar to Emily, and in a similar pose.
+</p><p>
+<img src="RosamondEmily.jpg"> <br>
 </p><p>
 When Rosamond's creators, Marjorie Sharmat and Marc Simont, allegedly began contacting companies who had contracts related to Emily the Strange and urged them to drop their relationships with Cosmic Debris, Cosmic Debris sued Sharmat and Simont. Sharmat and Simont counter-sued.
 </p><p>
