--- a/EmmaFrost/EmmaFrost.html
+++ b/EmmaFrost/EmmaFrost.html
@@ -2,17 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Emma Frost</title>
 </head>
 
 <body>
-<h2>Emma Frost</h2>
 <img src="EmmaFrost.jpg"> <br>
-Series: 18 issues, 2003<br>
-Publisher: Marvel<br>
+18 issues in 2003 by Marvel
 <p>
-Cover by Greg Horn Karl Bollers. Written by Randy Green. "HIGHER LEARNING" Pt. 1 (of 6) Get in on the ground floor as Marvel explores the early life and times of the NEW X- MEN's Emma Frost! Witness the first time her powers manifested and how she blossomed from an innocent teenager into the ruthless woman we know her as today!
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="EmmaFrost.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EmmaFrost1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EmmaFrost2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EmmaFrost3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EmmaFrost4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EmmaFrost5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EmmaFrost6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Emma Grace Frost is a fictional character appearing in American comic books published by Marvel Comics, most commonly in association with the X-Men. The character first appeared in The Uncanny X-Men #129 (January 1980), and was created by writer Chris Claremont and artist/co-writer John Byrne. 
+</p><p>
+Emma Frost, also known as the White Queen, has evolved from a supervillain and foe of the X-Men, to becoming a superhero and one of the X-Men's most central members and leaders until the events of Inhumans vs. X-Men.
+</p><p>
+Frost belongs to a subspecies of humanity called mutants, who are born with superhuman abilities. She is an urbane telepath with a well-noted dry wit. The character appears in many adaptations of the X-Men properties, such as video games, animated programs, and the live-action film X-Men: First Class by January Jones.
 </p>
 
 </body>
