--- a/HardBoiled/HardBoiled.html
+++ b/HardBoiled/HardBoiled.html
@@ -2,24 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Hard Boiled</title>
 </head>
 
 <body>
-Hard Boiled<br>
-<img src="HardBoiled1990issue1.jpg"> 
-<img src="HardBoiled1990issue2.jpg">
-<img src="HardBoiled1990issue3.jpg">
-<img src="HardBoiled1993.jpg"><br>
-Series: 3 issues 1990, 1 collection (TPB) 1993, Graphic Novel 1997<br>
-Publisher: Dark Horse<br>
-Written by Frank Miller<br>
-Illustrations by Geof Darrow<br>
+<img src="HardBoiled1990issue1.jpg"><br>
+3 issues in 1990, 1 collection (TPB) 1993, 1 Graphic Novel 1997 by Dark Horse
 <p>
-1990: He knows exactly who he is and what his job is and why he's killing people- none of it's true, but he knows that, too! Hard Boiled is reality through the eyes of a psychotic cyborg.  Two killing machines battle it out in the heart of Hollywood. Bad day for innocent bystanders. Tax collector... insurance investigator... psychotic cyborg. Whatever his name, whatever his occupation, the watch words for Hard Boiled are "action-packed!"
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="HardBoiled1990issue1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HardBoiled1990issue2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HardBoiled1990issue3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HardBoiled1993.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HardBoiled1997.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HardBoiled6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HardBoiled7.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-<img src="HardBoiled1997.jpg">
+Written by <a href="../FrankMiller/FrankMiller.html">Frank Miller</a> Illustrations by <a href="../GeofDarrow/GeofDarrow.html">Geof Darrow</a>
+</p><p>
+1990: He knows exactly who he is and what his job is and why he's killing people- none of it's true, but he knows that, too! Hard Boiled is reality through the eyes of a psychotic cyborg.  Two killing machines battle it out in the heart of Hollywood. Bad day for innocent bystanders. Tax collector... insurance investigator... psychotic cyborg. Whatever his name, whatever his occupation, the watch words for Hard Boiled are "action-packed!"
 </p><p>
 1997: Second Edition reprint of the 1990 series. Rolling Stone described it as "intricate, kinetic, and thoroughly outrageous!" Now you can experience Geof's art like never before. More than 40% bigger than the original publication and without color or word balloons, it's totally amazing! It's totally mind-blowing! It's totally Darrow! 
 </p>
